fix [#37011] "Save Copy" option misfunction