source/blender/windowmanager/intern/wm_operators.c
@@ -2540,6 +2540,8 @@ static bool blend_save_check(bContext *UNUSED(C), wmOperator *op)
 
 static void WM_OT_save_as_mainfile(wmOperatorType *ot)
 {
+	PropertyRNA *prop;
+
 	ot->name = "Save As Blender File";
 	ot->idname = "WM_OT_save_as_mainfile";
 	ot->description = "Save the current file in the desired location";
@@ -2554,8 +2556,9 @@ static void WM_OT_save_as_mainfile(wmOperatorType *ot)
 	RNA_def_boolean(ot->srna, "compress", 0, "Compress", "Write compressed .blend file");
 	RNA_def_boolean(ot->srna, "relative_remap", 1, "Remap Relative",
 	                "Remap relative paths when saving in a different directory");
-	RNA_def_boolean(ot->srna, "copy", 0, "Save Copy",
+	prop = RNA_def_boolean(ot->srna, "copy", 0, "Save Copy",
 	                "Save a copy of the actual working state but does not make saved file active");
+	RNA_def_property_flag(prop, PROP_SKIP_SAVE);
 #ifdef USE_BMESH_SAVE_AS_COMPAT
 	RNA_def_boolean(ot->srna, "use_mesh_compat", 0, "Legacy Mesh Format",
 	                "Save using legacy mesh format (no ngons) - WARNING: only saves tris and quads, other ngons will "
